// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SidePanel Snapshots does not render header when side panel is closed 1`] = `
.emotion-0 {
  height: 100%;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-transition: width 150ms ease-out 0s;
  transition: width 150ms ease-out 0s;
  position: absolute;
  box-shadow: 0 8px 16px -8px rgba(0,0,0,0.16);
  background-color: #ffffff;
  width: 40px;
  padding: 0px;
  right: px;
  left: px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 .ezxdcmp1 {
  right: px;
  left: px;
}

<div
  aria-expanded={false}
  aria-orientation="vertical"
  className="emotion-0 emotion-1"
  open={false}
/>
`;

exports[`SidePanel Snapshots renders a closed side panel 1`] = `
.emotion-0 {
  height: 100%;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-transition: width 150ms ease-out 0s;
  transition: width 150ms ease-out 0s;
  position: absolute;
  box-shadow: 0 8px 16px -8px rgba(0,0,0,0.16);
  background-color: #ffffff;
  width: 40px;
  padding: 0px;
  right: px;
  left: px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 .ezxdcmp1 {
  right: px;
  left: px;
}

<div
  aria-expanded={false}
  aria-orientation="vertical"
  className="emotion-0 emotion-1"
  open={false}
/>
`;

exports[`SidePanel Snapshots renders a side panel header 1`] = `
.emotion-2 {
  height: 100%;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-transition: width 150ms ease-out 0s;
  transition: width 150ms ease-out 0s;
  position: absolute;
  box-shadow: px;
  background-color: #f6f7f8;
  width: 300px;
  padding: 24px;
  right: px;
  left: px;
  -webkit-align-items: px;
  -webkit-box-align: px;
  -ms-flex-align: px;
  align-items: px;
}

.emotion-2 .ezxdcmp1 {
  right: 16px;
  left: px;
}

.emotion-0 {
  font-size: 24px;
  line-height: 32px;
  font-weight: 700;
  color: #333333;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  margin-top: 0px;
}

<div
  aria-expanded={true}
  aria-orientation="vertical"
  className="emotion-2 emotion-3"
  open={true}
>
  <h2
    className="emotion-0 emotion-1"
  >
    Side Panel Header
  </h2>
</div>
`;

exports[`SidePanel Snapshots renders a side panel with children elements 1`] = `
.emotion-0 {
  height: 100%;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-transition: width 150ms ease-out 0s;
  transition: width 150ms ease-out 0s;
  position: absolute;
  box-shadow: px;
  background-color: #f6f7f8;
  width: 300px;
  padding: 24px;
  right: px;
  left: px;
  -webkit-align-items: px;
  -webkit-box-align: px;
  -ms-flex-align: px;
  align-items: px;
}

.emotion-0 .ezxdcmp1 {
  right: 16px;
  left: px;
}

<div
  aria-expanded={true}
  aria-orientation="vertical"
  className="emotion-0 emotion-1"
  open={true}
>
  <ul>
    <li>
      Home
    </li>
    <li>
      Favorites
    </li>
    <li>
      Recents
    </li>
    <li>
      Trash
    </li>
  </ul>
</div>
`;

exports[`SidePanel Snapshots renders a toggle button 1`] = `
.emotion-0 {
  height: 100%;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-transition: width 150ms ease-out 0s;
  transition: width 150ms ease-out 0s;
  position: absolute;
  box-shadow: 0 8px 16px -8px rgba(0,0,0,0.16);
  background-color: #ffffff;
  width: 40px;
  padding: 0px;
  right: px;
  left: px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 .ezxdcmp1 {
  right: px;
  left: px;
}

<div
  aria-expanded={false}
  aria-orientation="vertical"
  className="emotion-0 emotion-1"
  open={false}
/>
`;

exports[`SidePanel Snapshots renders as expected 1`] = `
.emotion-0 {
  height: 100%;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-transition: width 150ms ease-out 0s;
  transition: width 150ms ease-out 0s;
  position: absolute;
  box-shadow: px;
  background-color: #f6f7f8;
  width: 300px;
  padding: 24px;
  right: px;
  left: px;
  -webkit-align-items: px;
  -webkit-box-align: px;
  -ms-flex-align: px;
  align-items: px;
}

.emotion-0 .ezxdcmp1 {
  right: 16px;
  left: px;
}

<div
  aria-expanded={true}
  aria-orientation="vertical"
  className="emotion-0 emotion-1"
  open={true}
/>
`;

exports[`SidePanel Snapshots renders side panel on the left 1`] = `
.emotion-0 {
  font-size: 24px;
  line-height: 32px;
  font-weight: 700;
  color: #333333;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  margin-top: 0px;
}

.emotion-2 {
  height: 100%;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-transition: width 150ms ease-out 0s;
  transition: width 150ms ease-out 0s;
  position: absolute;
  box-shadow: px;
  background-color: #f6f7f8;
  width: 300px;
  padding: 24px;
  right: px;
  left: 0px;
  -webkit-align-items: px;
  -webkit-box-align: px;
  -ms-flex-align: px;
  align-items: px;
}

.emotion-2 .ezxdcmp1 {
  right: 16px;
  left: px;
}

<div
  aria-expanded={true}
  aria-orientation="vertical"
  className="emotion-2 emotion-3"
  open={true}
>
  <h2
    className="emotion-0 emotion-1"
  >
    Side Panel Header
  </h2>
</div>
`;

exports[`SidePanel Snapshots renders side panel on the right with correct toggle button when panel is closed 1`] = `
.emotion-0 {
  height: 100%;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-transition: width 150ms ease-out 0s;
  transition: width 150ms ease-out 0s;
  position: absolute;
  box-shadow: 0 8px 16px -8px rgba(0,0,0,0.16);
  background-color: #ffffff;
  width: 40px;
  padding: 0px;
  right: 0px;
  left: px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 .ezxdcmp1 {
  right: px;
  left: px;
}

<div
  aria-expanded={false}
  aria-orientation="vertical"
  className="emotion-0 emotion-1"
  open={false}
/>
`;

exports[`SidePanel Snapshots renders side panel on the right with correct toggle button when panel is open 1`] = `
.emotion-0 {
  font-size: 24px;
  line-height: 32px;
  font-weight: 700;
  color: #333333;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  margin-top: 0px;
}

.emotion-2 {
  height: 100%;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-transition: width 150ms ease-out 0s;
  transition: width 150ms ease-out 0s;
  position: absolute;
  box-shadow: px;
  background-color: #f6f7f8;
  width: 300px;
  padding: 24px;
  right: 0px;
  left: px;
  -webkit-align-items: px;
  -webkit-box-align: px;
  -ms-flex-align: px;
  align-items: px;
}

.emotion-2 .ezxdcmp1 {
  right: px;
  left: 16px;
}

<div
  aria-expanded={true}
  aria-orientation="vertical"
  className="emotion-2 emotion-3"
  open={true}
>
  <h2
    className="emotion-0 emotion-1"
  >
    Side Panel Header
  </h2>
</div>
`;
